5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1758_1183.log
== TEST (2019-05-23 19:22:09) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:11) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:11) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:11) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:11) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:11) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:12) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:12) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:12) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:12) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:12) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:13) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:13) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:13) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:13) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:13) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:13) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:13) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:13) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:13) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:14) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:14) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:14) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:14) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:20) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
while(n[i] >= 0 ):
	i = i + 1
	
while(n[i] < size(n)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:30:45) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
soma = 0
while(n[i] >= 0 ):
	i = i + 1
	soma = soma + 1
	
while(n[i] == i):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 19:34:58) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
soma = 0
while(n[i] >= 0 ):
	i = i + 1
	soma = soma + 1
	
while(n[i]8):
	print(n)
	
	
		

-- EXECUTION TIME:
0.160004
-- ERROR:
  File "/home/codebench/codes/1758/1183/main.py", line 10
    while(n[i]8):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:37:12) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
soma = 0
while(n[i] >= 0 ):
	i = i + 1
	soma = soma + 1
	
while(n[i]== i and n[i] == size(soma)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:38:12) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
soma = 0
while(n[i] >= 0 ):
	soma = soma + 1
	i = i + 1
	
	
while(n[i]== i and n[i] == size(soma)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 19:38:35) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
soma = 0
while(n[i] >= 0 ):
	soma = soma + 1
	i = i + 1
	
	
while(n[i]== i and n[i] == size(soma)):
	print(n)
	
	
		

-- EXECUTION TIME:
0.549703
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:

-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:

-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:38:42) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
soma = 0
while(n[i] >= 0 ):
	soma = soma + 1
	i = i + 1
	
	
while(n[i]== i and n[i] == size(soma)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:38:54) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
soma = 0
while(n[i] >= 0 ):
	soma = soma + 1
	i = i + 1
	print(soma)
	
while(n[i]== i and n[i] == size(soma)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:39:55) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
soma = 0
while(n[i] < 0 ):
	soma = soma + 1
	i = i + 1
	print(soma)
	
while(n[i]== i and n[i] == size(soma)):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 19:42:16) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
soma = 0
while(n[i] < 0 ):
	soma = soma + 1
	i = i + 1
	print(soma)
	
while(n[i]== i and n[i] > n - i):
	print(n)
	
	
		

-- EXECUTION TIME:
0.586494
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
1
2
3
4
5
6
7
8
9
10
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:

-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:42:16) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
soma = 0
while(n[i] < 0 ):
	soma = soma + 1
	i = i + 1
	print(soma)
	
while(n[i]== i and n[i] > n - i):
	print(n)
	
	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:45:41) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
t = arrange(n)
while(t[i]> 0 ):
	soma = soma + 1
	i = i + 1
	print(soma)
	

	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:45:56) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
t = arrange(n)
while(t[i]> 0 ):
	soma = soma + 1
	i = i + 1
	print(soma)
	

	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:46:11) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
t = arange(n)
while(t[i]> 0 ):
	soma = soma + 1
	i = i + 1
	print(soma)
	

	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:48:37) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
t = arange(n)
d = zeros(n)
while(t[i]> 0 ):
	d[i] = t[i]
	i = i + 1
	print(soma)
	

	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:58:41) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
t = arange(n)
d = zeros(n)
while(t[i]> 0 ):
	d[i] = t[i]
	i = i + 1
	print(soma)
while(n[i] < 0 and d[i] <= size[ti]):
	d[i] = d[i] + i
	

	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 14:59:09) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
t = arange(n)
d = zeros(n)
while(t[i]> 0 ):
	d[i] = t[i]
	i = i + 1

while(n[i] < 0 and d[i] <= size[ti]):
	d[i] = d[i] + i
	print(d[i])
	

	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:01:20) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i]> 0 ):
	soma = n[i]
	i = i + 1

while(n[i] < 0 and soma <= sizen[i]):
	n[i] = n[i] + i
	print(d[i])
	

	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:01:39) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i]> 0 ):
	soma = n[i]
	i = i + 1

while(n[i] < 0 and soma <= size(n[i]):
	n[i] = n[i] + i
	print(d[i])
	

	
		

-- ERROR:
File "XXXX", line 11
    while(n[i] < 0 and soma <= size(n[i]):
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:01:52) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i]> 0 ):
	soma = n[i]
	i = i + 1

while(n[i] < 0 and soma <= size(n[i])):
	n[i] = n[i] + i
	print(d[i])
	

	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:02:58) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i]> 0 ):
	print(n[i])
	i = i + 1


	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:03:55) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i]>= 0 ):
	print(n[i])
	i = i + 1


	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:06:43) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i]>= 0 ):
	a = array(eval(n[i]))
	i = i + 1


	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:06:50) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i]>= 0 ):
	a = array(eval(n[i]))
	i = i + 1
	print(a)


	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:14:02) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i] < size(n[i])  ):
	print(n[i])
	i = i + 1


	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:14:58) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i] < size(n[i])):
	i = i + 1
	print(n[i])


	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:15:50) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i] < size(n)):
	i = i + 1



	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:16:14) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i] < size(n)):
	i = i + 1
	print(n[i])



	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:16:36) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i] < size(n)):
	print(n[i])



	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:16:54) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i] < size(n)):
	print(n[i])



	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:17:30) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i] < size(n)):
	print(n[i])



	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:17:42) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i] < size(n)):
	print(n[i])



	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:18:41) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i] < size(n)):
	print(n[i])



	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 15:19:16) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i] < size(n)):
	


	
		

-- EXECUTION TIME:
0.155824
-- ERROR:
  File "/home/codebench/codes/1758/1183/main.py", line 13
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:19:45) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i] != size(n) ):
	


	
		

-- ERROR:
File "XXXX", line 13
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:20:07) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(n[i] != size(n)):
	print(n[i])
	


	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:23:06) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(i < size(n)):
	print(n[i])
	


	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:23:21) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(i < size(n)):
	print(n)
	


	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:25:09) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(i < size(n)):
	if(n[i] > 0):
		n = n[i]
		print(n)
		
	


	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 15:25:58) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0


while(i < size(n)):
	if(n > 0):
		n = n[i]
		print(n)
		
	


	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:10:48) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
j = 0
r = size(n)

while(i < r):
	if n[i] < 0:
		j = j + 1
	i = i + 1
n1 = zeros(r - j, dtype = int)
i = 0
k = 0
while(i < n):
	if n[i] >= 0:
		n1[k] = n[i]
		i = i + 1
		k = k + 1
	else:
		i = i + 1
	
		
	


	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:11:02) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
j = 0
r = size(n)

while(i < r):
	if n[i] < 0:
		j = j + 1
	i = i + 1
n1 = zeros(r - j, dtype = int)
i = 0
k = 0
while(i < n):
	if n[i] >= 0:
		n1[k] = n[i]
		i = i + 1
		k = k + 1
	else:
		i = i + 1
	
		
	


	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 16:11:33) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
j = 0
r = size(n)

while(i < r):
	if n[i] < 0:
		j = j + 1
	i = i + 1
n1 = zeros(r - j, dtype = int)
i = 0
k = 0
while(i < n):
	if n[i] >= 0:
		n1[k] = n[i]
		i = i + 1
		k = k + 1
	else:
		i = i + 1
	
		
	


	
		

-- EXECUTION TIME:
0.370349
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 15, in <module>
    while(i < n):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 16:11:36) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
j = 0
r = size(n)

while(i < r):
	if n[i] < 0:
		j = j + 1
	i = i + 1
n1 = zeros(r - j, dtype = int)
i = 0
k = 0
while(i < n):
	if n[i] >= 0:
		n1[k] = n[i]
		i = i + 1
		k = k + 1
	else:
		i = i + 1
	
		
	


	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:07:58) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
j = 0
r = size(n)

while(i < r):
	if n[i] < 0:
		j = j + 1
	i = i + 1
n1 = zeros(r - j, dtype = int)
i = 0
k = 0
while(i < n):
	if n[i] >= 0:
		n1[k] = n[i]
		i = i + 1
		k = k + 1
	else:
		i = i + 1
	
		
	


	
		

-- EXECUTION TIME:
0.513341
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 15, in <module>
    while(i < n):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:08:02) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
j = 0
r = size(n)

while(i < r):
	if n[i] < 0:
		j = j + 1
	i = i + 1
n1 = zeros(r - j, dtype = int)
i = 0
k = 0
while(i < n):
	if n[i] >= 0:
		n1[k] = n[i]
		i = i + 1
		k = k + 1
	else:
		i = i + 1
	
		
	


	
		

-- EXECUTION TIME:
0.410708
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 15, in <module>
    while(i < n):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:20:58) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype = int)

a = 0
b = 0

while(a < size(n)):
	if(p[a] >= 0):
		p[a] = n[i]
		a = a + 1
	b = b + 1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:21:48) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype = int)

a = 0
b = 0

while(a < size(n)):
	if(p[a] >= 0):
		p[a] = n[i]
		a = a + 1
	b = b + 1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:22:06) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype =int)

a = 0
b = 0

while(a < size(n)):
	if(p[a] >= 0):
		p[a] = n[i]
		a = a + 1
	b = b + 1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:22:24) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype =int)

a = 0
b = 0

while(a < size(n)):
	if(p[a] >= 0):
		p[a] = n[i]
		a = a + 1
	b = b + 1
print(p)
-- EXECUTION TIME:
0.351665
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 18, in <module>
    if(p[a] >= 0):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:22:38) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(p[a] >= 0):
		p[a] = n[i]
		a = a + 1
	b = b + 1
print(p)
-- EXECUTION TIME:
0.432708
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 18, in <module>
    if(p[a] >= 0):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:23:02) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(p[a] >= 0):
		p[a] = n[i]
		a = a + 1
	b = b + 1
print(r)
-- EXECUTION TIME:
0.40963
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 18, in <module>
    if(p[a] >= 0):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:23:04) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(p[a] >= 0):
		p[a] = n[i]
		a = a + 1
	b = b + 1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:23:05) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(p[a] >= 0):
		p[a] = n[i]
		a = a + 1
	b = b + 1
print(r)
-- EXECUTION TIME:
0.513983
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 18, in <module>
    if(p[a] >= 0):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:23:06) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(p[a] >= 0):
		p[a] = n[i]
		a = a + 1
	b = b + 1
print(r)
-- EXECUTION TIME:
0.700925
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 18, in <module>
    if(p[a] >= 0):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:23:17) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(r[a] >= 0):
		r[a] = n[i]
		a = a + 1
	b = b + 1
print(r)
-- EXECUTION TIME:
0.353789
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 19, in <module>
    r[a] = n[i]
IndexError: index 11 is out of bounds for axis 0 with size 11

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:23:27) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(r[a] >= 0):
		r[a] = n[i]
		a = a + 1
	b = b + 1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:26:24) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(n[a] > 0):
		r[b] = n[a]
		b = b + 1
	a = a + 1
	
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:26:30) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(n[a] > 0):
		r[b] = n[a]
		b = b + 1
	a = a + 1
	
print(r)
-- EXECUTION TIME:
1.1682
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:32:02) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(n[a] > 0):
		r[a] = n[i]
		a = a + 1
	b = b + 1
print(r)
-- EXECUTION TIME:
405.877
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:38:11) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(n[a] > 0):
		r[b] = n[a]
		b = b + 1
	a = a + 1
	
print(r)
-- EXECUTION TIME:
1.24724
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:38:11) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(n[a] > 0):
		r[b] = n[a]
		b = b + 1
	a = a + 1
	
print(r)
-- EXECUTION TIME:
2.88971
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:38:13) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(n[a] > 0):
		r[b] = n[a]
		b = b + 1
	a = a + 1
	
print(r)
-- EXECUTION TIME:
3.92166
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[2 3 5]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:38:13) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(n[a] > 0):
		r[b] = n[a]
		b = b + 1
	a = a + 1
	
print(r)
-- EXECUTION TIME:
2.33963
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:38:13) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(n[a] > 0):
		r[b] = n[a]
		b = b + 1
	a = a + 1
	
print(r)
-- EXECUTION TIME:
3.98402
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[18 32 14 25]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[1]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:38:14) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(n[a] > 0):
		r[b] = n[a]
		b = b + 1
	a = a + 1
	
print(r)
-- EXECUTION TIME:
2.8352
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:38:17) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(n[a] > 0):
		r[b] = n[a]
		b = b + 1
	a = a + 1
	
print(r)
-- EXECUTION TIME:
1.92127
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[1]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[2 3 5]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:38:17) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(n[a] > 0):
		r[b] = n[a]
		b = b + 1
	a = a + 1
	
print(r)
-- EXECUTION TIME:
0.767213
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1758/1183/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:38:17) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(n[a] > 0):
		r[b] = n[a]
		b = b + 1
	a = a + 1
	
print(r)
-- EXECUTION TIME:
2.54828
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[18 32 14 25]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:38:17) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(n[a] > 0):
		r[b] = n[a]
		b = b + 1
	a = a + 1
	
print(r)
-- EXECUTION TIME:
1.30161
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[2 3 5]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:38:31) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(n[a] > 0):
		r[b] = n[a]
		b = b + 1
	a = a + 1
	
print(r)
-- EXECUTION TIME:
0.505958
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:38:31) 
-- CODE:
from numpy import *
n = array(eval(input("insira o numero:")))

i = 0
p = 0

while(i < size(n)):
	if(n[i] >= 0):
		p = p + 1
	i = i + 1

r = zeros(p, dtype=int)

a = 0
b = 0

while(a < size(n)):
	if(n[a] > 0):
		r[b] = n[a]
		b = b + 1
	a = a + 1
	
print(r)
-- EXECUTION TIME:
1.06695
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
